js/js.translator/testData/incremental/invalidation/companionConstValWithIntraModuleInliner/lib2/inlineChild.0.6.kt
class InlineChild : Class() {
    inline fun inlineMethod(): String {
        return "${CONST_VALUE}"
    }
}
